Added top module, end module, added post data to the session global array, created receipt page

--- a/a3/css/main.css
+++ b/a3/css/main.css
@@ -54,9 +54,9 @@ body {
 /*  * Code sourced and adapted from:
     * https://www.w3schools.com/css/tryit.asp?filename=trycss_grid_layout_named */
 
-body.container-body {
-    grid-template-columns: 1fr;
-}
+/*body.container-body {*/
+/*    grid-template-columns: 1fr;*/
+/*}*/
 
 /********************************************************************************************/
 
