--- a/a3/css/media-screen-medium.css
+++ b/a3/css/media-screen-medium.css
@@ -289,6 +289,19 @@
     }
     /****************************************************************************************/
 
+    /* Receipt and Tickets ******************************************************************/
+    section.receipt-page > h1, section.ticket-page > h1 {
+        width: 90%;
+        font-size: 35px;
+        padding: 2.5em 0 2em 0;
+    }
+
+    div.receipt-body > div:first-child {
+        max-width: 350px;
+    }
+
+    /****************************************************************************************/
+
     /* Footer *******************************************************************************/
     div.container-footer {
         flex-direction: row;
