--- a/a3/css/media-screen-large.css
+++ b/a3/css/media-screen-large.css
@@ -128,6 +128,16 @@
     }
     /****************************************************************************************/
 
+    /* Receipt and Tickets ******************************************************************/
+    section.receipt-page > h1, section.ticket-page > h1 {
+        width: 75%;
+        font-size: 50px;
+        letter-spacing: 4px;
+    }
+
+    /****************************************************************************************/
+
+
     /* Footer *******************************************************************************/
     div.container-footer {
         padding: 1em 4em 4em 4em;
