Added writeToFile function and booking.txt file --> writes data to file if form submission does not contain an error. Small code clean-ups and fixes

--- a/a3/css/main.css
+++ b/a3/css/main.css
@@ -923,6 +923,12 @@ div.receipt-description table {
     transition: 0.5s;
 }
 
+div.receipt-description table thead {
+    background-color: var(--color-green);
+    text-align: center;
+    color:var(--color-white);
+}
+
 div.receipt-description table:hover {
     box-shadow: 10px 15px var(--color-green);
 }
