--- a/a3/css/media-screen-medium.css
+++ b/a3/css/media-screen-medium.css
@@ -296,6 +296,10 @@
         padding: 2.5em 0 2em 0;
     }
 
+    div.receipt-header img {
+        width: 130px;
+    }
+
     div.receipt-body > div:first-child {
         max-width: 350px;
     }
