A4 Part 3 -> Implemented subtotals for each seat - Plus and minus buttons were already implemented for A3 - Minor changes and fixes to CSS files and JS validation

--- a/a4/css/media-screen-medium.css
+++ b/a4/css/media-screen-medium.css
@@ -275,8 +275,11 @@
     }
 
     div.ticket-container {
+        transition: 0.5s;
+    }
+
+    div.ticket-container:hover {
         box-shadow: 10px 15px var(--color-black);
-        border: black 1px solid;
     }
 
     section.book-ticket fieldset > p [type=button] {
