--- a/a4/css/main.css
+++ b/a4/css/main.css
@@ -725,6 +725,13 @@ section.book-ticket fieldset > p [type=text] {
     width: 30vw;
 }
 
+section.book-ticket fieldset > span.subtotal-seat {
+    display: none;
+    font-size: 16px;
+    color: var(--color-black);
+    font-weight: 300;
+}
+
 section.book-ticket fieldset > p [type=button] {
     flex-grow: 2;
     border: 1px var(--color-green) solid;
