A4 Part 2 -> Implemented Remember me and Forget me using local storage

--- a/a4/css/media-screen-medium.css
+++ b/a4/css/media-screen-medium.css
@@ -286,9 +286,15 @@
         flex-grow: 1;
     }
 
-    section.book-ticket [type=submit] {
-        align-self: center;
-        width: 40%;
+    /*section.book-ticket [type=submit] {*/
+    /*    align-self: center;*/
+    /*    width: 40%;*/
+    /*}*/
+
+    div.button-checkbox {
+        grid-template-columns: 1fr 4fr;
+        margin: 0 auto 1em auto;
+        width: 90%;
     }
     /****************************************************************************************/
 
