--- a/a4/css/main.css
+++ b/a4/css/main.css
@@ -797,16 +797,48 @@ div.ticket-container h5 {
     font-size: 12px;
 }
 
+div.button-checkbox {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    gap: 5px;
+    font-size: 11px;
+    align-content: center;
+    justify-content: center;
+    margin: 0 0 1em 0;
+}
+
+section.book-ticket form input[type=checkbox] {
+    display: none;
+}
+
+section.book-ticket form input[type=checkbox] + label {
+    text-align: center;
+    cursor: pointer;
+    color: var(--color-grey-primary);
+    transition-duration: 0.4s;
+    border: 1px var(--color-green) solid;
+    border-radius: var(--radius);
+    opacity: 0.9;
+    padding: 1em;
+    align-self: center;
+    font-weight: 400;
+}
+
+section.book-ticket form input[type=checkbox]:checked + label {
+    background-color: var(--color-green);
+    color: var(--color-white);
+    opacity: 1;
+}
+
 section.book-ticket [type=submit] {
     cursor: pointer;
     border-radius: var(--radius);
-    padding: 10px;
+    padding: 1em;
     border: 1px var(--color-green) solid;
     background-color: var(--color-white);
     color: var(--color-grey-primary);
     transition-duration: 0.4s;
     opacity: 0.9;
-    margin: 0 0 1em 0;
 }
 
 section.book-ticket [type=submit]:hover, section.book-ticket [type=submit]:active, section.book-ticket [type=submit]:focus {
