--- a/a4/css/media-screen-large.css
+++ b/a4/css/media-screen-large.css
@@ -123,8 +123,12 @@
         width: 49%;
     }
 
-    section.book-ticket [type=submit] {
-        width: 30%;
+    /*section.book-ticket [type=submit] {*/
+    /*    width: 30%;*/
+    /*}*/
+
+    div.button-checkbox {
+        width: 60%;
     }
     /****************************************************************************************/
 
